--- a/app/globals.css
+++ b/app/globals.css
@@ -24,3 +24,13 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+.hand-bg-gradient {
+  background-image: linear-gradient(to right, #171717 0%, var(--color-pink-500) 40%, var(--color-yellow-500) 60%, #171717 100%);
+ /* linear-gradient(to bottom, black, #00000000, black); */
+}
+
+.font-console {
+  font-family: Mono, Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
+
+}
