more structured style, some great fonts loaded and used

--- a/app/globals.css
+++ b/app/globals.css
@@ -1,8 +1,8 @@
 @import "tailwindcss";
 
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #181818;
+  --foreground: #ededed;
 }
 
 @theme inline {
@@ -10,11 +10,13 @@
   --color-foreground: var(--foreground);
   --font-sans: var(--font-geist-sans);
   --font-mono: var(--font-geist-mono);
+  --font-anton: var(--Anton-Regular);
+  --font-literata: var(--literata-all);
 }
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
+    --background: #181818;
     --foreground: #ededed;
   }
 }
@@ -26,11 +28,14 @@ body {
 }
 
 .hand-bg-gradient {
-  background-image: linear-gradient(to right, #171717 0%, var(--color-pink-500) 40%, var(--color-yellow-500) 60%, #171717 100%);
- /* linear-gradient(to bottom, black, #00000000, black); */
+  background-image: linear-gradient(to right, #171717 0%, #f633bcd7 40%, #f08800d7 60%, #171717 100%);
+  /* linear-gradient(to bottom, black, #00000000, black); */
 }
 
 .font-console {
   font-family: Mono, Menlo, Consolas, Monaco, Lucida Console, Liberation Mono, DejaVu Sans Mono, Bitstream Vera Sans Mono, Courier New, monospace, serif;
-
 }
+
+/* .font-anton {
+  font-family: --Anton;
+} */
